Added style to header tag

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
 
-    <header class="content-center">
+    <header class="content-center bg-grey">
         <img src="./img/profile.png" height="200" alt="Immagine profilo curriculum">
         <h1>Pallino Pinco - Web Developer</h1>
+
+        <hr>
     </header>
 
 
